apps/nextcloud/nextcloud-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-db
  template:
    metadata:
      labels:
        app: nextcloud-db
    spec:
      nodeName: wk-03
      containers:
        - name: postgres
          image: docker.io/library/postgres:16.3
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: nextcloud-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: nextcloud-db
