apps/nextcloud/nextcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nextcloud.taxayp.com
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nextcloud.taxayp.com
    secretName: nextcloud-prod-tls
