apps/nextcloud/nextcloud-network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: nextcloud-security-policy
  namespace: nextcloud
spec:
  endpointSelector:
    matchLabels:
      app: nextcloud
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: ingress-nginx
        app.kubernetes.io/component: controller
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        app: nextcloud-db 
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
      - ports:
        - port: "53"
          protocol: UDP
        - port: "53"    
          protocol: TCP
        rules:
          dns:
          - matchPattern: "*"
  - toEntities:
    - world
